fixed navbar title and menu alignment

--- a/_sass/_mysteryManila.scss
+++ b/_sass/_mysteryManila.scss
@@ -79,7 +79,7 @@ nav {
 
             #nav-title {
               float: left;
-              margin: 11px 0px 0px 15px;
+              margin: 7px 0px 0px 15px;
               letter-spacing: 1px;
               font-size: 24px;
             } 
@@ -105,7 +105,7 @@ nav {
               width: 100%;
 
               li {
-                padding: 27px 8px 0px 8px;
+                padding: 20px 8px 0px 8px;
                 margin-top: 0px;
 
                 a {
